--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 
+!DOCTYPE html>
+<html lang="en-us">
+<head>
+  <meta charset="UTF-8">
+  <title>Veronique Singh Bio</title>
+</head>
+
+<body>
+
+  <h1>Veronique Singh</h1>
